--- a/EatSmart/app/src/main/res/layout/activity_details_restaurant_2.xml
+++ b/EatSmart/app/src/main/res/layout/activity_details_restaurant_2.xml
@@ -46,9 +46,8 @@
         android:minWidth="120dp"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:layout_alignParentTop="false"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -62,7 +61,9 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#00ffffff"
+            android:focusableInTouchMode="false">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -83,7 +84,8 @@
                 android:id="@+id/gridLayout2"
                 android:layout_gravity="center_horizontal"
                 android:layout_below="@+id/textView8"
-                android:layout_centerHorizontal="true" >
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/border">
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -95,7 +97,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -107,7 +109,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -119,7 +121,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -128,7 +130,7 @@
                     android:id="@+id/checkBox31"
                     android:layout_row="1"
                     android:layout_column="1"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:elegantTextHeight="false"
                     android:enabled="true"
                     android:allowUndo="true"
@@ -144,7 +146,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -156,7 +158,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -168,7 +170,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -180,7 +182,7 @@
                     android:allowUndo="true"
                     android:clickable="true"
                     android:enabled="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -192,7 +194,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
             </GridLayout>
 
             <TextView
@@ -212,13 +214,14 @@
                 android:orientation="horizontal"
                 android:layout_below="@+id/textView16"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/border">
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_1"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton5"
                     android:textSize="13dp" />
 
@@ -226,7 +229,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_2"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton6"
                     android:textSize="13dp" />
 
@@ -234,7 +237,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_3"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton7"
                     android:textSize="13dp" />
 
@@ -242,7 +245,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_4"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton8"
                     android:textSize="13dp" />
             </RadioGroup>
@@ -267,48 +270,49 @@
                 android:layout_alignStart="@+id/gridLayout4"
                 android:layout_toLeftOf="@+id/textView16"
                 android:layout_toStartOf="@+id/textView16"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/border">
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_1"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_2"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton2" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_3"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton3" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_4"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton4" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_5"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton11" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_6"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton12" />
             </RadioGroup>
         </LinearLayout>
