--- a/EatSmart/app/src/main/res/layout/activity_home_customer.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_customer.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jerem.eatsmart.home_customer"
     android:visibility="visible"
-    >
+    android:background="@drawable/bg_generic">
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,8 +25,8 @@
         android:clickable="true"
         android:contentDescription="@string/welcome_customer"
         android:src="@drawable/button_ifl"
-        android:maxHeight="120dp"
-        android:maxWidth="120dp"
+        android:maxHeight="150dp"
+        android:maxWidth="150dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
         android:adjustViewBounds="true"
@@ -35,7 +35,7 @@
         android:onClick="to_ifl"
         android:layout_below="@+id/imageView14"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp" />
+        android:layout_marginTop="25dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -45,7 +45,8 @@
         android:src="@drawable/name_logo_transparentbg"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:layout_marginTop="50dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -62,7 +63,8 @@
         android:adjustViewBounds="true"
         android:onClick="to_filter"
         android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
