--- a/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
@@ -5,54 +5,53 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jerem.eatsmart.home_restaurant"
-    android:nestedScrollingEnabled="false">
+    android:nestedScrollingEnabled="false"
+    android:background="@drawable/bg_profile">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/imageView6"
         android:scaleType="fitXY"
         android:visibility="visible"
         android:background="#00000000"
-        android:layout_below="@+id/textView54"
-        android:layout_centerHorizontal="true" />
+        android:minHeight="0dp"
+        android:layout_centerHorizontal="true"
+        android:minWidth="0dp"
+        android:layout_marginTop="31dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:singleLine="false"
-        android:text="RESTAURANT OWNER\nSIGNUP"
+        android:text="RESTO NAME"
         android:id="@+id/textView54"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
-        android:textColor="#ff0000" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="EDIT"
-        android:id="@+id/button7"
-        android:layout_alignParentBottom="true"
+        android:textColor="#ff0000"
+        android:layout_below="@+id/imageView6"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp" />
+        android:textSize="30dp"
+        android:textIsSelectable="false" />
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView"
-        android:layout_below="@+id/imageView6"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView54"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="right|left">
 
         <LinearLayout
             android:id="@+id/linearlayout1"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView54"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:paddingTop="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,7 +68,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="INSERT RESTAURANT DESCRIPTION HERE"
                 android:id="@+id/textView18"
                 android:layout_above="@+id/textView9"
                 android:layout_alignParentLeft="true"
@@ -79,17 +78,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="CUISINE"
+                android:text="CATEGORY"
                 android:id="@+id/textView14"
                 android:layout_above="@+id/textView15"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:textColor="#ff0000" />
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="INSERT CATEGORY HERE"
                 android:id="@+id/textView35"
                 android:layout_above="@+id/textView12"
                 android:layout_alignParentLeft="true"
@@ -104,12 +104,13 @@
                 android:layout_above="@+id/textView17"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:textColor="#ff0000" />
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="INSERT PRICE RANGE HERE"
                 android:id="@+id/textView38"
                 android:layout_above="@+id/textView14"
                 android:layout_alignParentLeft="true"
@@ -124,12 +125,13 @@
                 android:layout_above="@+id/textView18"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:textColor="#ff0000" />
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="INSERT LOCATION HERE"
                 android:id="@+id/textView2" />
 
             <TextView
@@ -141,12 +143,13 @@
                 android:layout_above="@+id/textView17"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:textColor="#ff0000" />
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="INSERT CONTACT NO. HERE"
                 android:id="@+id/textView39"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
@@ -162,9 +165,19 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:textColor="#ff0000"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp" />
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EDIT"
+        android:id="@+id/button7"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp" />
 
 </RelativeLayout>
