--- a/EatSmart/app/src/main/res/layout/activity_rate_and_comment.xml
+++ b/EatSmart/app/src/main/res/layout/activity_rate_and_comment.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jerem.eatsmart.rate_and_comment">
+    tools:context="com.example.jerem.eatsmart.rate_and_comment"
+    android:background="@drawable/bg_generic">
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,17 +37,18 @@
         android:layout_below="@+id/ratingBar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="17dp" />
+        android:layout_marginTop="30dp" />
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:id="@+id/editText4"
         android:layout_below="@+id/textView53"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="25dp"
-        android:maxLines="10" />
+        android:maxLines="10"
+        android:background="@drawable/border2" />
 
     <Button
         android:layout_width="wrap_content"
@@ -58,14 +60,4 @@
         android:layout_centerHorizontal="true"
         android:onClick="send" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView59"
-        android:layout_marginTop="72dp"
-        android:layout_below="@+id/editText4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 </RelativeLayout>
