--- a/EatSmart/app/src/main/res/layout/activity_restau_choose.xml
+++ b/EatSmart/app/src/main/res/layout/activity_restau_choose.xml
@@ -5,7 +5,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jerem.eatsmart.restau_choose">
+    tools:context="com.example.jerem.eatsmart.restau_choose"
+    android:background="@drawable/bg_packages">
 
     <ImageButton
         android:layout_width="120dp"
@@ -13,17 +14,17 @@
         android:id="@+id/imageButton3"
         android:src="@drawable/craving_pac"
         android:background="@null"
-        android:layout_marginBottom="72dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/imageButton4"
-        android:layout_toStartOf="@+id/imageButton4"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:maxHeight="120dp"
         android:maxWidth="120dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_below="@+id/textView28"
+        android:layout_toLeftOf="@+id/imageButton4"
+        android:layout_toStartOf="@+id/imageButton4"
+        android:layout_marginTop="20dp" />
 
     <ImageButton
         android:layout_width="120dp"
@@ -58,18 +59,20 @@
         android:text="CHOOSE A DIFFERENT PACKAGE"
         android:id="@+id/textView28"
         android:textColor="#ff0000"
-        android:layout_above="@+id/imageButton4"
+        android:layout_gravity="center"
+        android:textSize="20dp"
+        android:layout_below="@+id/imageView7"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="21dp" />
+        android:layout_marginTop="40dp" />
 
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/imageView7"
         android:src="@drawable/button_ifl"
-        android:layout_above="@+id/textView28"
+        android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp" />
+        android:layout_marginTop="40dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,6 +83,7 @@
         android:id="@+id/textView6"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/imageView7"
-        android:layout_alignStart="@+id/imageView7" />
+        android:layout_alignStart="@+id/imageView7"
+        android:layout_marginTop="50dp" />
 
 </RelativeLayout>
