--- a/EatSmart/app/src/main/res/layout/activity_search_result.xml
+++ b/EatSmart/app/src/main/res/layout/activity_search_result.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jerem.eatsmart.search_result"
-    >
+    android:background="@drawable/bg_generic">
 
     <Button
         android:layout_width="wrap_content"
@@ -15,96 +15,19 @@
         android:onClick="to_rate_and_comment"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="DESCRIPTION"
-        android:id="@+id/textView23"
-        android:textColor="#ff0000"
-        android:layout_below="@+id/imageView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="CATEGORY"
-        android:id="@+id/textView60"
-        android:textColor="#ff0000"
-        android:layout_below="@+id/textView63"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="PRICE RANGE"
-        android:id="@+id/textView61"
-        android:textColor="#ff0000"
-        android:layout_below="@+id/textView64"
-        android:layout_alignRight="@+id/textView23"
-        android:layout_alignEnd="@+id/textView23" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="LOCATION"
-        android:id="@+id/textView62"
-        android:textColor="#ff0000"
-        android:layout_below="@+id/textView65"
-        android:layout_alignLeft="@+id/textView65"
-        android:layout_alignStart="@+id/textView65" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView63"
-        android:layout_below="@+id/textView23"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView64"
-        android:layout_below="@+id/textView60"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView65"
-        android:layout_below="@+id/textView61"
-        android:layout_alignLeft="@+id/textView61"
-        android:layout_alignStart="@+id/textView61" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView66"
-        android:layout_below="@+id/textView62"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginBottom="10dp" />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/imageView3"
         android:scaleType="fitXY"
         android:visibility="visible"
-        android:background="#000000"
-        android:layout_below="@+id/textView67"
+        android:background="#00000000"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:layout_marginTop="40dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -112,10 +35,150 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:singleLine="false"
-        android:text="RESTAURANT OWNER\nSIGNUP"
-        android:id="@+id/textView67"
+        android:text="RESTO NAME"
+        android:id="@+id/textView23"
         android:gravity="center_horizontal"
         android:textColor="#ff0000"
-        android:layout_alignParentTop="true"
+        android:textSize="30dp"
+        android:textIsSelectable="false"
+        android:layout_below="@+id/imageView3"
         android:layout_centerHorizontal="true" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView4"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="right|left"
+        android:layout_below="@+id/textView23"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView54"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:paddingTop="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="DESCRIPTION"
+                android:id="@+id/textView44"
+                android:layout_above="@+id/textView13"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ff0000" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="INSERT RESTAURANT DESCRIPTION HERE"
+                android:id="@+id/textView45"
+                android:layout_above="@+id/textView44"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="CATEGORY"
+                android:id="@+id/textView46"
+                android:layout_above="@+id/textView48"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="INSERT CATEGORY HERE"
+                android:id="@+id/textView47"
+                android:layout_above="@+id/textView12"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="PRICE RANGE"
+                android:id="@+id/textView48"
+                android:layout_above="@+id/textView50"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="INSERT PRICE RANGE HERE"
+                android:id="@+id/textView49"
+                android:layout_above="@+id/textView46"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="LOCATION"
+                android:id="@+id/textView50"
+                android:layout_above="@+id/textView45"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="INSERT LOCATION HERE"
+                android:id="@+id/textView51" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="CONTACT DETAILS"
+                android:id="@+id/textView60"
+                android:layout_above="@+id/textView50"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ff0000"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="INSERT CONTACT NO. HERE"
+                android:id="@+id/textView61"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="RATINGS AND COMMENTS"
+                android:id="@+id/textView62"
+                android:layout_above="@+id/textView50"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ff0000"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp" />
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
