--- a/EatSmart/app/src/main/res/layout/activity_true_home_restau.xml
+++ b/EatSmart/app/src/main/res/layout/activity_true_home_restau.xml
@@ -5,15 +5,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jerem.eatsmart.true_home_restau">
+    tools:context="com.example.jerem.eatsmart.true_home_restau"
+    android:background="@drawable/bg_generic">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button16"
         android:src="@drawable/choose_profile"
-        android:maxHeight="120dp"
-        android:maxWidth="120dp"
+        android:maxHeight="150dp"
+        android:maxWidth="150dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
         android:clickable="true"
@@ -21,8 +22,9 @@
         android:scaleType="fitXY"
         android:background="@null"
         android:layout_alignTop="@+id/button17"
-        android:layout_toLeftOf="@+id/textView5"
-        android:layout_toStartOf="@+id/textView5" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="25dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -33,14 +35,15 @@
         android:background="@null"
         android:scaleType="fitXY"
         android:src="@drawable/choose_pack"
-        android:maxHeight="120dp"
-        android:maxWidth="120dp"
+        android:maxHeight="150dp"
+        android:maxWidth="150dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
         android:layout_marginBottom="130dp"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/textView5"
-        android:layout_toEndOf="@+id/textView5" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="25dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -50,7 +53,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:layout_marginTop="50dp" />
 
     <TextView
         android:layout_width="wrap_content"
