--- a/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
@@ -74,7 +74,8 @@
         android:layout_alignRight="@+id/button6"
         android:layout_alignEnd="@+id/button6"
         android:layout_alignLeft="@+id/button6"
-        android:layout_alignStart="@+id/button6" />
+        android:layout_alignStart="@+id/button6"
+        android:focusable="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -122,7 +123,8 @@
         android:layout_alignRight="@+id/editText4"
         android:layout_alignEnd="@+id/editText4"
         android:layout_alignLeft="@+id/editText4"
-        android:layout_alignStart="@+id/editText4" />
+        android:layout_alignStart="@+id/editText4"
+        android:focusable="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -144,6 +146,7 @@
         android:layout_alignRight="@+id/editText6"
         android:layout_alignEnd="@+id/editText6"
         android:background="@drawable/border"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:focusable="true" />
 
 </RelativeLayout>
